--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.5.5",
     "mongoose": "^5.9.4",
     "validator": "^12.2.0"
   },
