--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon server.js",
-    "prod": "NODE_ENV=production nodemon server.js"
+    "start": "node server.js",
+    "debug": "ndb server.js",
+    "prod": "nodemon server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -16,7 +17,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.4",
-    "validator": "^12.2.0"
+    "validator": "^12.2.0",
+    "morgan": "^1.9.1"
+
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -27,7 +30,6 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
-    "morgan": "^1.9.1",
     "prettier": "^1.19.1"
   }
 }
