--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services: 
 
     api:
+        restart: always
         build: .
         command: ["yarn", "start"]
         env_file: 
