--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "nodemon server.js",
     "debug": "ndb server.js",
-    "prod": "nodemon server.js",
+    "start:prod": "SET NODE_ENV=production & nodemon server.js",
     "test": "jest"
   },
   "dependencies": {
